# textrank-with-zemberek

./: README.md  pyproject.toml
data/misc/: Bad Dictionary Items Work.docx
summarizer/: main.py
summarizer/core/: grpc_server.py  text_rank.py  turkish_nlp.py
summarizer/utils/: language_id_pb2.py  language_id_pb2_grpc.py  morphology_pb2.py  morphology_pb2_grpc.py  normalization_pb2.py  normalization_pb2_grpc.py  preprocess_pb2.py  preprocess_pb2_grpc.py  zemberek_client_test.py
